--- a/CommerceProject/CommerceProject.csproj
+++ b/CommerceProject/CommerceProject.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3" />
     <PackageReference Include="Blazorise.Material" Version="0.9.3" />
     <PackageReference Include="Blazorise.Sidebar" Version="0.9.3" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     <PackageReference Include="Volo.Abp.BlazoriseUI" Version="4.2.2" />
   </ItemGroup>
 
