Added Transaction.cs & GetTransactionData, with working UI

--- a/CommerceProject/CommerceProject/CommerceProject.csproj
+++ b/CommerceProject/CommerceProject/CommerceProject.csproj
@@ -8,12 +8,14 @@
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.1" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.1" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
 </Project>
