Added login connection string for remote database

--- a/CommerceProject/CommerceProject/appsettings.json
+++ b/CommerceProject/CommerceProject/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CommerceProject-451F3A3A-26A5-435B-B225-8AD4CA394E47;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "CommerceProjectContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CommerceProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=NEWBLUE-PC\\COMMERCE_BANK;Database=aspnet-CommerceProject-451F3A3A-26A5-435B-B225-8AD4CA394E47;User ID=Developer2;Password=commerce1;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
