--- a/CommerceProject/CommerceProject/CommerceProject.csproj
+++ b/CommerceProject/CommerceProject/CommerceProject.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DataAccessLibrary\DataAccessLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
