--- a/CommerceProject/CommerceProject/CommerceProject.csproj
+++ b/CommerceProject/CommerceProject/CommerceProject.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Toast" Version="3.1.2" />
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.1" />
     <PackageReference Include="Blazorise.Charts" Version="0.9.3.1" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.1" />
