--- a/CommerceProject/CommerceProject/CommerceProject.csproj
+++ b/CommerceProject/CommerceProject/CommerceProject.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.1" />
     <PackageReference Include="Blazorise.Charts" Version="0.9.3.1" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.1" />
+    <PackageReference Include="CsvHelper" Version="27.0.1" />
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
