--- a/DataAccessLibrary/DataAccessLibrary.csproj
+++ b/DataAccessLibrary/DataAccessLibrary.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.0.1" />
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="SendGrid" Version="9.22.0" />
